--- a/index.html
+++ b/index.html
@@ -3,17 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/css/style.css">
     <title>Tela de login com autenticação</title>
 </head>
 <body>
-     <!--
-        
-        <i class="fa-solid fa-user"></i>
-
-        <i class="fa-brands fa-apple"></i>
-        <i class="fa-brands fa-google"></i>
-    -->
+    <div class="container">
+        <img src="src/img/beautiful-nature-pictures-jogs8ect5lsn4gnk.jpg" alt="imagem paisagem">
+        <div class="container-form">
+            <form>
+                <h2>Crie a sua conta</h2>
+                <span>Ja tens uma conta ? Faça <a href="#">Login</a></span>
+                <div class="form-row-one">
+                    <input type="text" name="first_name" id="first_name" placeholder="Primeiro nome" required autocomplete="additional-name">
+                    <input type="text" name="last_name" id="last_name" placeholder="Último nome" required autocomplete="additional-name">
+                </div>
+                <div class="form-row-two">
+                    <input type="email" name="email" id="email" required placeholder="Email" autocomplete="email">
+                </div>
+                <div class="form-row-tree">
+                    <input type="password" name="password" id="password" required placeholder="Entrar com a tua palavra passe" autocomplete="current-password">
+                </div>
+                <div class="row-checkbox">
+                    <input type="checkbox" name="terms" id="terms" required>
+                    <small for="terms">Eu aceito todos os <a href="#">termos e condições</a></small>
+                </div>
+                <div class="row-btn">
+                    <button id="btn">Criar conta</button>
+                </div>
+                <div class="opcions">
+                    <small>Ou entre com</small>
+                </div>
+                <div class="opcion">
+                    <button>
+                        <img src="src/img/icons8-google-logo-48 (1).png" alt="" style="width: 1rem">
+                        <span>Google</span>
+                    </button>
+                    <button>
+                        <i class="fa-brands fa-apple"></i> Apple
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
     <script src="src/js/script.js"></script>
 </body>
 </html>
