Adicionando login de senha e email no firebase

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="opcion">
                     <button id="google_btn">
-                        <img src="src/img/icons8-google-logo-48 (1).png" alt="" style="width: 1rem">
+                        <img src="src/img/icons8-google-logo-48 (1).png" alt="" style="width: 1rem" class="google-img">
                         <span>Google</span>
                     </button>
                     <button id="apple_btn">
@@ -61,6 +61,5 @@
     </div>
     <script src="src/js/script.js" type="module"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script type="module" src="src/js/firebase.js"></script>
 </body>
 </html>
