Adicionado conexão com a google e facebook

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <span>Google</span>
                     </button>
                     <button id="apple_btn">
-                        <i class="fa-brands fa-apple"></i> Apple
+                        <i class="fa-brands fa-facebook" style="color: blue"></i> Facebook
                     </button>
                 </div>
             </form>
